<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@+id/master_list_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e4e4e4"
    xmlns:android="http://schemas.android.com/apk/res/android" />