...

            </LinearLayout>

        </ScrollView>

        <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/rv_detail_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/card"
            android:paddingTop="24dp"
            android:paddingBottom="16dp"
...
